# Algorithms-and-Data-Structures

./: CMakeLists.txt  README.md  Untested Pseudo Algorithms  avlTree.h  catch.h  coinChange.cpp  coinChange.h  hashing.cpp  hashing.h  lista.h  main.cpp  mergeSort.cpp  mergeSort.h  minHeap.h  tests.cpp  utility.cpp  utility.h
 Approximation-Algorithms/Bin-Packing/: binPacking.cpp  binPacking.h
Approximation-Algorithms/Bin-Packing/: binPacking.cpp  binPacking.h
Approximation-Algorithms/Vertex Cover/: vertexCover.cpp  vertexCover.h
BackTracking/: division.cpp  division.h  nQueens.cpp  nQueens.h
Backtrack/: README.md
Backtrack/5-digit-division/: division.cpp  division.h
Backtrack/NQueen/: nQueens.cpp  nQueens.h
Backtrack/Subset Sum/: SubsetSum.cpp  SubsetSum.h
Branch-and-Bound-Algorithms/KnapSack/: bbKnapSack.cpp  bbKnapSack.h
Catch2/: tests.cpp
Data-Structures/: avlTree.cpp  graph.cpp  graph.h  hashing.h  lista.cpp  minHeap.h  minHeapStructure.h  wGraph.cpp  wGraph.h
Data-Structures/DisjointSet/: disjointSet.cpp  disjointSet.h
Data-Structures/Graph/: README.md
Data-Structures/Graph/Non-Weight-Graph/: README.md  graph.cpp  graph.h
Data-Structures/Graph/Weighted-Graph/: README.md  wGraph.cpp  wGraph.h
Data-Structures/Hash/: README.md  hashing.cpp
Data-Structures/Heap/: README.md  minHeap.cpp
Data-Structures/Heap/Modified/: minHeapStructure.cpp
Data-Structures/Lista/: README.md  lista.cpp  lista.h
Data-Structures/Tree/AVL/: README.md  avlTree.h
Data-Structures/Tree/NormalBinary/: README.md  binaryTree.cpp  binaryTree.h
Dynamic-Programming/: README.md  knapsack.cpp  knapsack.h  stringProblems.cpp
Dynamic-Programming/Coin-Change/: coinChange.cpp  coinChange.h
Dynamic-Programming/KnapSack/: README.md  knapsack.cpp  knapsack.h
Dynamic-Programming/Longest-Common-Subsequence/: README.md  longestCommonSubsequence.cpp  longestCommonSubsequence.h  stringProblems.h
Dynamic-Programming/Subset-Sum/: README.md  subsetSum.cpp  subsetSum.h
Greedy Algorithms/: krustal.cpp  krustal.h
Greedy-Algorithms/: README.md
Greedy-Algorithms/Djkistra/: Djikstra.cpp  Djikstra.h  README.md
Greedy-Algorithms/Minimum-Spamming-Tree/: README.md
Greedy-Algorithms/Minimum-Spamming-Tree/Kruskal/: README.md  kruskal.cpp  kruskal.h
Greedy-Algorithms/Minimum-Spamming-Tree/Krustal/: krustal.cpp  krustal.h
Greedy-Algorithms/Minimum-Spamming-Tree/Prim/: README.md  prim.cpp  prim.h
Sorting-Algorithms/: mergeSort.cpp  quicksort.cpp  quicksort.h
Sorting-Algorithms/MergeSort/: README.md  mergeSort.cpp  mergeSort.h
Sorting-Algorithms/QuickSort/: README.md  quicksort.cpp
